22/4/2018 1.7.2.4

    user visible changes:
    * SVNTable.get_immediate_child_items_q had wrong name for svn_item_t table, which caused exception when uninstalling

    programmer visible changes:
    * removed redundant class InstlAdmin.RemoveIfNotSpecificVersion

16/4/2018 1.7.2.3

    user visible changes:
    * added retry mechanism to utils.open_for_read_file_or_url
    * fixed calculation of num_required_files in InstlInstanceSync.mark_required_items

15/4/2018 1.7.2.2

   admin visible changes:
    * detailed self.progress report on verify-repo command

    programmer visible changes:
    * self.progress can change it's total progress dynamically
    * self.progress can have multiple messages which will all be " ".join-ed

9/4/2018 1.7.2.1

    Many changes, to numerous to detail here to shorten execution time and better progress reporting. See commit comments in branches no-alchemy and central_v9_no_alcehmy for details

    admin vidible changes:
    * fixed issue in verify_index_to_repo where !file soirce were reproted as missing

27/2/2018 1.7.0.0

    user visible changes:
    * __include__ can not have the attribute 'destination' to specify a folder where to place the included file
    admin vidible changes:
    * new folder hierarchy on S3: repo-rev is devided to pairs: e.g. repo-rev 123 would be under 01/23
    * support for compressing info_map and index files with zlib, such files will have anew extension .wzlib
    * commands create-links up2s3: option --all-revisions replaced with --revision [all|number]
    * removed usage of RSA signatures and key files which were not used for a long time
    * command read-yaml added option to output the read yaml
    * InstlAdmin.create_links_for_revision disabled the creation of .txt version of the files in instl folder - to save upload time - since they were not useful anyway
    programmer visible changes:
    * utils.download_from_file_or_url was refactored for simplicity and for support of .wzlib files